--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
     "dependencies": {
       "etpl": "~3.0.1",
       "fastclick": "~1.0.6",
-      "saber-dom": "~1.0.0",
-      "saber-emitter": "~2.0.0",
-      "saber-firework": "~2.0.0",
-      "saber-lang": "~2.0.1",
-      "saber-mm": "~1.0.1",
-      "saber-promise": "~2.0.0",
-      "saber-router": "~2.0.0",
-      "saber-run": "~1.0.0",
-      "saber-string": "~1.0.0",
-      "saber-uri": "~1.0.6",
-      "saber-viewport": "~1.1.0",
-      "saber-widget": "~1.0.0",
-      "saber-ajax": "~2.1.0"
+      "saber-dom": "^1.0.0",
+      "saber-emitter": "^1.0.0",
+      "saber-firework": "^1.0.0",
+      "saber-lang": "^1.0.2",
+      "saber-promise": "^1.0.0",
+      "saber-router": "^1.0.0",
+      "saber-run": "^1.0.0",
+      "saber-string": "^1.0.0",
+      "saber-uri": "^1.0.6",
+      "saber-viewport": "^1.1.0",
+      "saber-widget": "^1.0.0",
+      "saber-ajax": "^1.0.0"
     },
     "requireConfig": {
       "baseUrl": "src"
