--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "devDependencies": {
-    "edp-provider-rider": "^2.0.0"
+    "edp-provider-rider": "^2.0.0",
+    "rider-ui": "^0.1.2"
   }
 }
